# brink

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  ENGINEERING_DESIGN.md  GAME_MANUAL.md  README.md  UNIFICATION_PLAN.md  WEBAPP_ENGINEERING_DESIGN.md  doc_browser.py  fly.toml  pyproject.toml  test_claude_sdk.py  test_removal_log.md
.github/workflows/: ci.yml  deploy.yml
docs/: CLI_WEBAPP_PARITY_REPORT.md  COMPREHENSIVE_PLAYTEST_REPORT.md  LLM_PLAYTEST_REPORT.json  LLM_PLAYTEST_REPORT.md
scenarios/: berlin_blockade.json  brexit_negotiations.json  byzantine_succession.json  cold_war_espionage.json  cuban_missile_crisis.json  integration-test.json  medici_banking_dynasty.json  nato_burden_sharing.json  opec_oil_politics.json  silicon_valley_tech_wars.json  taiwan_strait_crisis.json
scripts/: analyze_mechanics.py  balance_simulation.py  balance_validation.py  ci.sh  comprehensive_llm_playtest.py  exploitation_timing_sim.py  generate_and_validate_scenario.py  generate_favicon.py  generate_manual.py  generate_scenario.py  generate_scenario_library.py  llm_playtest.py  parameter_sweep.py  run_all_simulations.py  run_playtest.py  sim_crisis_termination.py  sim_information.py  sim_settlement.py  sim_stability.py  sim_variance.py  test_argon2.py  test_game_manual_reading.py  test_models.py  update_scenario_personas.py  validate_scenario.py  visual_qa_themes.py
scripts/playtest/: driver.sh  generate_report.py  run_matchup.py
src/brinksmanship/: llm.py  parameters.py  prompts.py
src/brinksmanship/cli/: __init__.py  app.py  trace.py
src/brinksmanship/coaching/: __init__.py  bayesian_inference.py  post_game.py
src/brinksmanship/engine/: __init__.py  endings.py  game_engine.py  resolution.py  state_deltas.py  variance.py
src/brinksmanship/generation/: __init__.py  scenario_generator.py  schemas.py  validator.py
src/brinksmanship/models/: __init__.py  actions.py  matrices.py  state.py
src/brinksmanship/opponents/: __init__.py  base.py  deterministic.py  historical.py  persona_generator.py
src/brinksmanship/storage/: __init__.py  config.py  file_repo.py  repository.py  sqlite_repo.py
src/brinksmanship/testing/: __init__.py  batch_runner.py  engine_playtester.py  game_runner.py  human_simulator.py  playtester.py
tasks/: INDEX.md  T00_test_harness_ci.md  T01_delete_obsolete_docs.md  T02_create_parameters.md  T03_gamestate_surplus.md  T04_state_deltas_surplus.md  T05_engine_surplus_logic.md  T06_variance_vp_calculation.md  T07_settlement_rejection.md  T08_integration_test.md  T09_balance_sim_dual_metrics.md  T10_remove_textual.md  T11_cli_scaffolding.md  T12_cli_game_loop.md  T13_scenario_schema_theme.md  T14_webapp_surplus_display.md  T15_cli_settlement_ui.md  T16_cli_scorecard.md  T17_update_scenarios.md  T18_css_era_themes.md  T19_theme_selection_ui.md  T20_webapp_scorecard.md  T21_e2e_balance_test.md  T22_visual_qa_themes.md  T23_exploitation_timing_sim.md  T24_parameter_sweep_sim.md  T25_cli_webapp_parity.md  T26_conversation_history.md
tests/: conftest.py  test_actions.py  test_analyze_mechanics.py  test_bayesian_inference.py  test_endings.py  test_game_engine.py  test_human_simulator.py  test_human_simulator_integration.py  test_matrices.py  test_mechanics_benchmark.py  test_playtester.py  test_post_game.py  test_real_llm_integration.py  test_resolution.py  test_state.py  test_state_deltas.py  test_storage.py  test_variance.py
tests/cli/: test_app.py  test_keybindings.py
tests/e2e/: conftest.py
tests/integration/: test_game_engine.py  test_game_runner.py  test_surplus_mechanics.py
tests/playtest/: __init__.py  test_harness.py
tests/unit/: test_actions.py  test_endings.py  test_llm_conversation.py  test_matrices.py  test_resolution.py  test_state.py  test_state_deltas.py  test_variance.py  test_webapp_claude_requirement.py
tests/webapp/: __init__.py  conftest.py  test_auth.py  test_engine_adapter.py  test_engine_adapter_surplus.py  test_game.py  test_leaderboard.py  test_lobby.py  test_manual.py  test_mock_engine.py  test_real_engine_integration.py  test_scenarios.py  test_settlement.py
(+46 files in other folders)
